force-app/main/default-backup/objects/Agr_FinancialAccount__c/Agr_FinancialAccount__c.object-meta.xml
<CustomObject>
    <label>Conta Bancária</label>
    <nameField>
        <label>Número da conta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contas Bancárias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>