force-app/main/default-backup/objects/Agr_FinancialAccount__c/fields/Agr_AccountChecksum__c.field-meta.xml
<CustomField>
    <fullName>Agr_AccountChecksum__c</fullName>
    <label>Dígito verificador da conta</label>
    <length>2</length>
    <type>Text</type>
</CustomField>