force-app/main/default-backup/objects/Agr_FinancialAccount__c/fields/Agr_BankNumber__c.field-meta.xml
<CustomField>
    <fullName>Agr_BankNumber__c</fullName>
    <label>Código do banco</label>
    <length>8</length>
    <type>Text</type>
</CustomField>