force-app/main/default-backup/objects/Agr_FinancialAccount__c/fields/Agr_BranchNumber__c.field-meta.xml
<CustomField>
    <fullName>Agr_BranchNumber__c</fullName>
    <label>Código da agência</label>
    <length>5</length>
    <type>Text</type>
</CustomField>