force-app/main/default-backup/objects/Agr_FinancialAccount__c/fields/Agr_CBLCId__c.field-meta.xml
<CustomField>
    <fullName>Agr_CBLCId__c</fullName>
    <label>CBLC</label>
    <referenceTo>Agr_CBLC__c</referenceTo>
    <relationshipLabel>Contas Bancárias</relationshipLabel>
    <relationshipName>Contas_Bancarias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>