force-app/main/default-backup/objects/Agr_FinancialAccount__c/fields/Agr_IsJointAccount__c.field-meta.xml
<CustomField>
    <fullName>Agr_IsJointAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conta conjunta</label>
    <type>Checkbox</type>
</CustomField>