force-app/main/default-backup/objects/Agr_FinancialAccount__c/fields/Agr_SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>Agr_SourceSystemId__c</fullName>
    <externalId>true</externalId>
    <label>Identificador único da conta bancária</label>
    <length>100</length>
    <type>Text</type>
</CustomField>