force-app/main/default-backup/objects/Agr_FinancialAccount__c/fields/Agr_Status__c.field-meta.xml
<CustomField>
    <fullName>Agr_Status__c</fullName>
    <label>Conta inativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativa</fullName>
            </value>
            <value>
                <fullName>Inativa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>